--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:dev start:api",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "json-server": "^0.15.0",
+    "npm-run-all": "^4.1.5",
     "redux-immutable-state-invariant": "^2.1.0"
   }
 }
